--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 
-body {
+html,body {
     width: 100%;
     height: 100vh;
     margin: 0px;
     padding: 0px;
-    overflow-x: hidden;
+    max-width:100% !important;
+    overflow-x: hidden !important;
     
 }
 
