--- a/style.css
+++ b/style.css
@@ -1,11 +1,9 @@
-
-html,body {
+body {
     width: 100%;
     height: 100vh;
     margin: 0px;
     padding: 0px;
-
-    
+    overflow-x: hidden;
 }
 
 .top-container {
